--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -18,5 +18,14 @@
         android:id="@+id/resultScreen"
         android:name="com.example.calcmyfuel.resultScreen"
         android:label="fragment_result_screen"
-        tools:layout="@layout/fragment_result_screen" />
+        tools:layout="@layout/fragment_result_screen" >
+        <action
+            android:id="@+id/action_resultScreen_to_mapsActivity"
+            app:destination="@id/mapsActivity" />
+    </fragment>
+    <activity
+        android:id="@+id/mapsActivity"
+        android:name="com.example.calcmyfuel.MapsActivity"
+        android:label="activity_maps"
+        tools:layout="@layout/activity_maps" />
 </navigation>
