--- a/app/src/main/res/layout-land/fragment_start_screen.xml
+++ b/app/src/main/res/layout-land/fragment_start_screen.xml
@@ -17,7 +17,7 @@
         app:layout_constraintTop_toBottomOf="@+id/startingLocationText" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/destination"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
@@ -74,7 +74,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/average_fuel_usage_l_100km"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintTop_toBottomOf="@+id/destination" />
 
     <TextView
         android:id="@+id/fuelInTankText"
