--- a/app/src/main/res/layout/fragment_start_screen.xml
+++ b/app/src/main/res/layout/fragment_start_screen.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toBottomOf="@+id/startingLocationText" />
 
     <EditText
-        android:id="@+id/editTextTextPersonName2"
+        android:id="@+id/destination"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -78,7 +78,7 @@
         android:text="@string/average_fuel_usage_l_100km"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+        app:layout_constraintTop_toBottomOf="@+id/destination" />
 
     <TextView
         android:id="@+id/fuelInTankText"
